[tool.poetry]
name = "nonebot-plugin-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
license = "MIT"
packages = [
    { include = "nonebot_plugin_sqlalchemy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-rc.1"
sqlalchemy = { extras = ["asyncio"], version = "^1.4.42" }

[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.17.0"
sqlalchemy2-stubs = "^0.0.2a29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
